--- a/website/public/index.html
+++ b/website/public/index.html
@@ -6,7 +6,10 @@
 
     <title>Diswitch</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="stylesheet" href="https://unpkg.com/flowbite@1.4.2/dist/flowbite.min.css" />
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/flowbite@1.4.2/dist/flowbite.min.css"
+    />
     <script src="https://unpkg.com/flowbite@1.4.2/dist/flowbite.js"></script>
 
     <link rel="icon" type="image/png" href="/favicon.png" />
